--- a/index3.html
+++ b/index3.html
@@ -262,21 +262,9 @@
             document.getElementById('recommendationResult').style.display = 'none';
         }
     </script>
+                </body>
+            </html>
+                
 
 
 
-Penjelasan Pembaruan:
-
-1. Pengertian di Home: Menambahkan penjelasan tentang apa itu aroma diffuser di bagian Home.
-
-
-2. FAQ di Kontak: Menambahkan bagian FAQ di halaman Kontak untuk memberikan informasi lebih lanjut kepada pengunjung.
-
-
-3. Desain Lebih Menarik: Menambahkan elemen seperti gambar hero di bagian Home, transisi hover pada produk, dan penyajian yang lebih menarik untuk setiap bagian.
-
-
-
-Dengan penambahan ini, tampilan website akan lebih informatif dan menarik. Pastikan untuk mengganti 'path/to/hero-image.jpg' dan gambar lainnya dengan path gambar yang sesuai. Jika ada yang perlu diubah lebih lanjut atau ingin ditambahkan, beri tahu saja!
-
-</body></html>
